- Include missing permission definitions from Products.CMFCore. [phgross]
- Fix PrivateFolders Title encoding. [phgross]
- Show userid instead of E-Mail address on all sources (except EMailSource). [mathias.leimgruber]
- Fix "leave GEVER" on logout overlay. [mathias.leimgruber]
- Disbale swfobject.js - no longer load Flash Fallback for multiuploads. [mathias.leimgruber]
- Add missing contacts only sources, used by customer special dossiers. [phgross]
- Reset journal after copy a document. [mathias.leimgruber]
- Switch back to the orginal plone.formwidget.autocomplete package from our fork. [phgross]
- Fix task assign form: Only users and the inbox of the current user is selectable. [mathias.leimgruber]
- Fix for OGIP 15: no longer make a deepcopy of the payload. [mathias.leimgruber]
- Render subdossier tree collapsed initially. [Kevin Bieri]
- Implement and enable the org unit selector etag adapter. [phgross]
- Hard-code base profiles to be installed for every deployment. [deiferni]
- Add api_group deployment configuration option. [deiferni]
- Improve visual search on customer request. [Kevin Bieri]
- Merge Generic Setup profiles into a new opengever.core:default profile. [phgross]
- Replace the AutocompleteField(Multi)Widget with the KeywordWidget. This makes the AutocompleteWidget obsolete. [mathias.leimgruber]
- Respect lookup_groups_base during OGDS group sync. [phgross]
- Use our own forks of Products.LDAPUserFolder and Products.LDAPMultiPlugins. [phgross]
- Fix Subject link on dossier overview. [mathias.leimgruber]
- Fix tasktemplate view by adding a missing </table> tag. [mathias.leimgruber]
- Install ftw.copymovepatches for better move performance. [mathias.leimgruber]
- Use latest ftw.datepicker for all datetime widgets. [mathias.leimgruber]
- Make `resolving` a dossier customizable and provide two implementations (strict and lenient). [deiferni]
- Replace changed_security with elevated_privileges. [deiferni]